2018-02-26  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* users/23169: Completion/Base/Completer/_expand: treat ~[...]
	the same way is other forms of tilde expansion: only expand
	if accept-exact is set.

	* 42399: Doc/Zsh/builtins.yo: better description of interaction
	between echo and dashes.

2018-02-22  Daniel Hahler  <zsh@thequod.de>

	* 42364: Completion/Unix/Command/_git: _git: fix __git_ignore_line to
	ignore the current word.

2018-02-17  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 42362: Src/jobs.c: protet REPORTTIME logic from bad status.

2018-02-13  Peter Stephenson  <p.stephenson@samsung.com>

	* Eitan Adler: Doc/Zsh/params.yo: REPORTMEMORY is in kilobytes,
	not megabytes.

2018-02-12  Peter Stephenson  <p.stephenson@samsung.com>

	* Martijn: 42355: Src/exec.c, Test/A04redirect.ztst:
	Interpreation of backslash on here doc input was inconsistent
	and confusing.

2018-02-12  Daniel Hahler  <zsh@thequod.de>

	* 42324: Completion/Unix/Command/_git: _git: handle mutually exclusive
	options.

2018-02-11  Daniel Hahler  <zsh@thequod.de>

	* 42327: Completion/Unix/Command/_make: _make: complete _files.

2018-02-08  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Completion/Unix/Command/_subversion: Support
	subcommands with hyphens in their names, such as 'shelf-list
	(shelves)' from upstream 1.10 development versions.

2018-02-07  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* Christian Hesse: 42333: Completion/Unix/Command/_git: Starting
	with version 2.16.0 git no longer accepts an empty string as a
	pathspec element. Thus we have to replace empty strings with a dot.

	* Matthew Martin: 42330: Completion/Unix/Command/_ln:
	-L and -P are POSIX, but not supported by Darwin or NetBSD

	* wgh@torlan.ru: 42336: Completion/Unix/Command/_adb: force
	single column output when getting filenames with adb ls command

	* 42343: Completion/Unix/Command/_subversion: complete
	--config-option more than once
